--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>蓝色小导航-蓝福利导航-蓝色福利导航</title>
-<meta name="keywords" content="福利导航,蓝福利导航,蓝色福利导航,蓝色导航,蓝色小导航,福导航,蓝福利导航,第一福利导航,福利,fuli,福利所导航,第一福利,美女写真套图,美女丝袜论坛,动漫acg,宅男福利吧,网址导航,撸管福利论坛,无毒的网站你懂的,男人福利,福利资源,宅男网站大全,手机酷站,找福利,一键好去处"/>
+<meta name="keywords" content="福利导航,蓝色导航,蓝色小导航"/>
 <meta name="description" content="蓝色小导航,打造完全绿色无毒无广告,收录全面更新及时的福利导航."/>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
@@ -47,7 +47,7 @@
 <marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://hand.gq" target="_blank"><span style="color:#2bf7c0;">hand.gq</span></a></strong> 
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://week.gq" target="_blank"><span style="color:#2bf7c0;">week.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="https://ns.postcc.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
@@ -83,7 +83,6 @@
 <li><a href="http://www.up01.cc/" target="_blank">UP01</a></li>
 <li><a href="http://www.lungtan.org/" target="_blank">龍壇</a></li>
 <li><a href="http://www.zuozhekan.com/" target="_blank">坐着看</a></li>
-<li><a href="http://www.xxbook.club/" target="_blank">疯情书库</a></li>
 <li><a href="http://www.cool18.com/bbs4/" target="_blank">禁忌书屋</a></li>
 <li><a href="http://www.dushang33.xyz/" target="_blank">杜尚论坛</a></li>
 <li><a href="http://mtl17.pw/" target="_blank">摩天轮社区</a></li>
@@ -103,7 +102,7 @@
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://aaasss8.com/" target="_blank">SeDog</a></li>
 <li><a href="http://www.xb123.top/" target="_blank">花花世界</a></li>
-<li><a href="https://7777av.co/" target="_blank">千百撸</a></li>
+<li><a href="https://8888av.co/" target="_blank">千百撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.414zz.com/" target="_blank">台湾妹娱乐网</a></li>
@@ -124,7 +123,7 @@
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://dianying01.com/?fromuid=981" target="_blank">电影01社区</a></li>
 <li><a href="http://www.wochalei.com/" target="_blank">貳月紅論壇</a></li>
-<li><a href="http://bbbq.org/" target="_blank">三涩论坛</a></li>
+<li><a href="http://cc6.us/" target="_blank">搞搞吧</a></li>
 <li><a href="http://thzbbt.com/?fromuid=70941" target="_blank">桃花族</a></li>
 				    </ul>
 		</div>
@@ -141,7 +140,7 @@
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
 <li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
-<li><a href="http://yptq9.space/" target="_blank">约炮偷情导航</a></li>
+<li><a href="http://yptq3.space/" target="_blank">约炮偷情导航</a></li>
 <li><a href="http://www.xinfuli.cc/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -161,14 +160,14 @@
 <li><a href="http://www.nmdaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
 <li><a href="http://aidaaidh.com/" target="_blank">大爱导航</a></li>
-<li><a href="http://lajiao8.ml/" target="_blank">辣椒导航</a></li>
+<li><a href="http://lajiao1.xyz/" target="_blank">辣椒导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
 <li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
 <li><a href="http://www.cluotuo.net/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.yikufl.net/" target="_blank">一库福利导航</a></li>
-<li><a href="http://www.ifulisao.info/" target="_blank">福利嫂宅男导航</a></li>
+<li><a href="http://www.fulisao.net/" target="_blank">福利嫂导航</a></li>
 <li><a href="http://www.icjgdh.info/" target="_blank">藏姬阁导航</a></li>
 <li><a href="http://www.fulisuo666.com/" target="_blank">福利所</a></li>
                     </ul>
@@ -180,26 +179,27 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.bxzx99.info/" target="_blank">百性在线</a></li>
+<li><a href="http://www.bxzx88.info/" target="_blank">百性在线</a></li>
 <li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
-<li><a href="http://www.jisewang.com/" target="_blank">季色网</a></li>
+<li><a href="http://www.tuoleku.com/" target="_blank">脱了裤</a></li>
+<li><a href="http://www.jise8.com/" target="_blank">季色网</a></li>
 <li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
-<li><a href="http://qusiji.com/" target="_blank">老司机视频</a></li>
+<li><a href="http://dtsj.pw/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
+<li><a href="https://www.thk1.info/" target="_blank">桃花开在线</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
-<li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
-<li><a href="http://www.apian60.com/" target="_blank">A片迷</a></li>
+<li><a href="http://www.apian70.com/" target="_blank">A片迷</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
+<li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
+<li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
-<li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.8888av.xyz/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
-<li><a href="http://www.xhg123.info/" target="_blank">寻欢阁</a></li>
 <li><a href="http://www.caobiao34.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
 <li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
@@ -214,24 +214,20 @@
 <li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
-<li><a href="http://tunvlav.info/" target="_blank">兔女郎</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
-<li><a href="http://email.selaos520.at.gmail.com.exf2b3cs.space/" target="_blank">初水视频</a></li>
 <li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
 <li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
 <li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
-<li><a href="https://hk.cav5.com/" target="_blank">CAV5</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://yesbbb.com/" target="_blank">夜夜撸</a></li>
 <li><a href="http://www.avtb678.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://av234567.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv16.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://cn.ax98.ws/" target="_blank">高清AVHD101</a></li>
 <li><a href="http://www.7mav.cc/" target="_blank">7M视频</a></li>
-<li><a href="http://www.5xss1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.5xsq1.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.67sz123.com/" target="_blank">67射站</a></li>
 <li><a href="http://www.hongfange888.net/" target="_blank">红番阁</a></li>
 <li><a href="http://www.lulupron.net/" target="_blank">东京热</a></li>
@@ -242,7 +238,7 @@
 <li><a href="http://www.se848.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
-<li><a href="http://www.vod47.com/" target="_blank">VOD视频</a></li>
+<li><a href="http://www.vod49.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.238hk.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.19kmkm.com/" target="_blank">56pao</a></li>
 <li><a href="https://vid.caocee.com/" target="_blank">CaoPorn</a></li>
@@ -252,7 +248,6 @@
 <li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
-<li><a href="http://www.singlove.com/" target="_blank">whichAV</a></li>
 <li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://guoganbaijiale.org/" target="_blank">果敢百家乐</a></li>
 <li><a href="http://fcw18.com/" target="_blank">废柴视频网</a></li>
@@ -262,7 +257,7 @@
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.nekoxxx.com/" target="_blank">免費線上看</a></li>
-<li><a href="http://www.twav14.com/" target="_blank">AV中文</a></li>
+<li><a href="http://www.twav15.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
 <li><a href="http://www.pomiav.com/" target="_blank">爆米花免費AV</a></li>
 <li><a href="http://www.321jav.com/" target="_blank">321JAV</a></li>
@@ -306,7 +301,7 @@
 <li><a href="http://maturetubeporn.xyz/" target="_blank">Maturetube</a></li>
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
-<li><a href="http://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
+<li><a href="https://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
 <li><a href="http://www.asianpornmovies.com/" target="_blank">Asianporn</a></li>
 <li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="https://tub99.com/" target="_blank">TUB99</a></li>
@@ -314,15 +309,16 @@
 <li><a href="http://www.seemyporn.com/" target="_blank">SeeMyPorn</a></li>
 <li><a href="http://www.uporno.xxx/" target="_blank">UPORNO</a></li>
 <li><a href="https://xhamster.com/" target="_blank">xHamster</a></li>
+<li><a href="https://xfreehd.com/" target="_blank">XFreeHD</a></li>
 <li><a href="https://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
 <li><a href="http://www.freejizzvideos.com/" target="_blank">Free Jizz</a></li>
 <li><a href="https://www.hdpornt.com/" target="_blank">HDPORNT</a></li>
 <li><a href="http://www.movieshark.com/" target="_blank">MOVIESHARK</a></li>
 <li><a href="http://neathdporn.com/" target="_blank">Neat HD Porn</a></li>
 <li><a href="http://www.absoluporn.com/" target="_blank">AbsoluPorn</a></li>
+<li><a href="http://www.pornktube.com/" target="_blank">PORNKTUBE</a></li>
 <li><a href="http://pornorio.org/" target="_blank">Pornorio</a></li>
-<li><a href="http://pornfun.com/" target="_blank">PornFun</a></li>
-<li><a href="https://www.pornjam.com/" target="_blank">Pornjam</a></li>
+<li><a href="https://pornfun.com/" target="_blank">PornFun</a></li>
 <li><a href="http://www.epornik.com/" target="_blank">ePornik</a></li>
 <li><a href="http://www.shesfreaky.com/" target="_blank">ShesFreaky</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOODAMA</a></li>
@@ -351,6 +347,7 @@
 <li><a href="http://www.likuoo.video/" target="_blank">likuoo</a></li>
 <li><a href="http://pornxs.com/" target="_blank">Pornxs</a></li>
 <li><a href="https://www.porn.com/" target="_blank">PORN</a></li>
+<li><a href="https://www.pornjam.com/" target="_blank">Pornjam</a></li>
 <li><a href="http://prettynudegirls.info/" target="_blank">PrettyNude</a></li>
 <li><a href="http://pornve.com/" target="_blank">PornVe</a></li>
 <li><a href="https://www.pornoxo.com/" target="_blank">PornoXO</a></li>
@@ -375,14 +372,12 @@
 <li><a href="http://leechporn.com/" target="_blank">Leechporn</a></li>
 <li><a href="http://javthai.me/" target="_blank">JavThai</a></li>
 <li><a href="http://javcl.com/" target="_blank">JAVCL</a></li>
-<li><a href="http://jk11.co/" target="_blank">JK World</a></li>
+<li><a href="https://av01.tv/" target="_blank">AV01</a></li>
 <li><a href="https://avuncensor.com/" target="_blank">AV uncensor</a></li>
 <li><a href="http://hdhardporn.com/" target="_blank">HDHardPorn</a></li>
 <li><a href="http://adultdouga-db.com/" target="_blank">無料AV アダルト</a></li>
 <li><a href="http://javmix.tv/" target="_blank">Javmix</a></li>
-<li><a href="http://www.cntheta.net/" target="_blank">OJAV</a></li>
 <li><a href="http://beejp.net/" target="_blank">BeeJP</a></li>
-<li><a href="http://javdiscovery.com/" target="_blank">JAVDISCOVERY</a></li>
 <li><a href="https://javfinder.com/" target="_blank">JavFinder</a></li>
 <li><a href="https://xxffo.com/" target="_blank">xxxfk</a></li>
 <li><a href="https://xmovies247.com/" target="_blank">Xmovies</a></li>
@@ -813,7 +808,7 @@
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
-<li><a href="http://www.btcherry.info/" target="_blank">BT樱桃</a></li>
+<li><a href="http://www.btyingtao.wang/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuai.net/" target="_blank">BT快搜</a></li>
 <li><a href="http://www.bt977.com/" target="_blank">BT977</a></li>
 <li><a href="http://www.btmeet.org/" target="_blank">Btbook</a></li>
