--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://week.gq" target="_blank"><span style="color:#2bf7c0;">week.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="https://ns.postcc.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="https://ns.ddder.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://with.gq/" target="_blank">精品福利</a></li>
 <li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
@@ -184,13 +184,14 @@
 <li><a href="http://www.tuoleku.com/" target="_blank">脱了裤</a></li>
 <li><a href="http://www.jise8.com/" target="_blank">季色网</a></li>
 <li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
-<li><a href="http://dtsj.pw/" target="_blank">老司机视频</a></li>
+<li><a href="http://xusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="https://www.thk1.info/" target="_blank">桃花开在线</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
 <li><a href="http://www.apian70.com/" target="_blank">A片迷</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
+<li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -253,6 +254,10 @@
 <li><a href="http://fcw18.com/" target="_blank">废柴视频网</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
+<li><a href="http://goodav17.com/" target="_blank">正妹AV</a></li>
+<li><a href="http://se8av.com/" target="_blank">色吧AV</a></li>
+<li><a href="https://diguoav.com/" target="_blank">帝国AV</a></li>
+<li><a href="https://maomidy.com/" target="_blank">猫咪AV</a></li>
 <li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
@@ -268,7 +273,6 @@
 <li><a href="http://www.av539.com/" target="_blank">av539</a></li>
 <li><a href="http://www.letsjav.com/" target="_blank">Letsjav</a></li>
 <li><a href="https://myavsuper.com/" target="_blank">myAV SUPER</a></li>
-<li><a href="https://avgle.com/" target="_blank">Avgle</a></li>
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
 <li><a href="http://www.avku7.com/" target="_blank">高清在线AV</a></li>
@@ -568,7 +572,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://13vlib.com/cn/" target="_blank">JavLibrary</a></li>
+<li><a href="http://www.ja14b.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
 <li><a href="http://www.kkav.tv/" target="_blank">一本道</a></li>
