--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <li><a href="http://with.gq/" target="_blank">精品福利</a></li>
 <li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
-<li><a href="http://lovecityclub.com/bt/?u=701541" target="_blank">爱城</a></li>
+<li><a href="http://208.94.244.98/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77126.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
@@ -69,17 +69,17 @@
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
-<li><a href="http://www.sewangchao5.com/" target="_blank">夜色王朝</a></li>
+<li><a href="http://www.sewangchao2.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://wk.hizhan123.com/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="https://www.tvboxnow.com/index.php" target="_blank">公仔箱論壇</a></li>
 <li><a href="http://173.192.147.20/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://365xav.tk/thread-173029-1-1.html?x=1382595" target="_blank">XIAAV论坛</a></li>
-<li><a href="http://www.aix159.com/?fromuid=1199668" target="_blank">九爱城社区</a></li>
+<li><a href="http://www.aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayarr.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://bb.taoy666.info/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://av.avlang18.info/index.php?a=3886" target="_blank">AV狼</a></li>
-<li><a href="http://www.ddx559.com/?fromuid=406113" target="_blank">新不夜城</a></li>
+<li><a href="http://www.ddx258.com/?fromuid=406113" target="_blank">新不夜城</a></li>
 <li><a href="http://www.up01.cc/" target="_blank">UP01</a></li>
 <li><a href="http://www.lungtan.org/" target="_blank">龍壇</a></li>
 <li><a href="http://www.zuozhekan.com/" target="_blank">坐着看</a></li>
@@ -95,7 +95,7 @@
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.pw/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
-<li><a href="http://www.mimiaaa.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.mimihhh.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio889.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.33/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
@@ -141,6 +141,7 @@
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
 <li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://yptq3.space/" target="_blank">约炮偷情导航</a></li>
+<li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
 <li><a href="http://www.xinfuli.cc/" target="_blank">新福利导航</a></li>
 <li><a href="http://www.lansedh.tk/" target="_blank">蓝色导航3.0</a></li>
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -148,23 +149,22 @@
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
 <li><a href="http://www.haoavfl.com/" target="_blank">好AV导航</a></li>
 <li><a href="http://www.ssmmdh.com/" target="_blank">色妹妹导航</a></li>
+<li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.com/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-<li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
 <li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
+<li><a href="http://zaixianavdh.info/" target="_blank">在线av导航</a></li>
 <li><a href="http://www.nmdaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://bigefuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
 <li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
-<li><a href="http://www.nmdaohang.com/" target="_blank">尼玛导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
-<li><a href="http://aidaaidh.com/" target="_blank">大爱导航</a></li>
+<li><a href="http://aidada.space/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao1.xyz/" target="_blank">辣椒导航</a></li>
 <li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
 <li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
-<li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
 <li><a href="http://www.cluotuo.net/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.yikufl.net/" target="_blank">一库福利导航</a></li>
 <li><a href="http://www.fulisao.net/" target="_blank">福利嫂导航</a></li>
@@ -186,22 +186,24 @@
 <li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
 <li><a href="http://xusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
-<li><a href="https://www.thk1.info/" target="_blank">桃花开在线</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
 <li><a href="http://www.apian70.com/" target="_blank">A片迷</a></li>
+<li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
-<li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
+<li><a href="http://khd123.info/" target="_blank">快活岛</a></li>
+<li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
+<li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
 <li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.8888av.xyz/" target="_blank">夏娃视频</a></li>
-<li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
 <li><a href="http://www.caobiao34.com/" target="_blank">我要操婊</a></li>
+<li><a href="http://www.91rav.com/" target="_blank">91RAV</a></li>
 <li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
 <li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
@@ -212,7 +214,6 @@
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://email.qisededizhi.at.gmail.com.qs7.space/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.bs6.space/" target="_blank">本色视频</a></li>
-<li><a href="http://yeyeaisp.com/" target="_blank">夜色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
@@ -222,17 +223,17 @@
 <li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://www.avtb678.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb789.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://av234567.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv16.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://cn.ax98.ws/" target="_blank">高清AVHD101</a></li>
-<li><a href="http://www.7mav.cc/" target="_blank">7M视频</a></li>
-<li><a href="http://www.5xsq1.com/" target="_blank">5X社区</a></li>
+<li><a href="http://www.7mshipin.com/" target="_blank">7M视频</a></li>
+<li><a href="http://www.5xsq2.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.67sz123.com/" target="_blank">67射站</a></li>
-<li><a href="http://www.hongfange888.net/" target="_blank">红番阁</a></li>
-<li><a href="http://www.lulupron.net/" target="_blank">东京热</a></li>
-<li><a href="http://99kk6.com/" target="_blank">久久热</a></li>
+<li><a href="http://www.hongfange123.info/" target="_blank">红番阁</a></li>
+<li><a href="http://www.mao005.com/" target="_blank">东京热</a></li>
+<li><a href="http://99kk7.com/" target="_blank">久久热</a></li>
 <li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
 <li><a href="http://www.aotu20.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.qqxxcc.com/" target="_blank">青青草</a></li>
@@ -249,8 +250,6 @@
 <li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
-<li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
-<li><a href="http://guoganbaijiale.org/" target="_blank">果敢百家乐</a></li>
 <li><a href="http://fcw18.com/" target="_blank">废柴视频网</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
@@ -275,8 +274,8 @@
 <li><a href="https://myavsuper.com/" target="_blank">myAV SUPER</a></li>
 <li><a href="https://www.avfrog.com/" target="_blank">AVFrog</a></li>
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
-<li><a href="http://www.avku7.com/" target="_blank">高清在线AV</a></li>
-<li><a href="http://www.maotu.tv/" target="_blank">猫兔TV</a></li>
+<li><a href="http://www.avku8.com/" target="_blank">高清在线AV</a></li>
+<li><a href="http://www.kuav6.com/" target="_blank">猫兔TV</a></li>
 <li><a href="http://www.dbj3333.com/" target="_blank">大宝剑</a></li>
 <li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
 <li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
@@ -412,20 +411,21 @@
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.pw/?fromuid=190756" target="_blank">我爱原味网</a></li>
+<li><a href="http://www.nztdsm10.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
 <li><a href="https://u15.info/" target="_blank">U-15天堂</a></li>
+<li><a href="http://www.young-dreams.com/" target="_blank">Young Dreams</a></li>
 <li><a href="http://www.wumeisz.net/?fromuid=9546" target="_blank">妩媚山庄</a></li>
-<li><a href="http://www.nztdsm9.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="http://www.milfsalute.com/" target="_blank">熟女图片</a></li>
-<li><a href="http://www.foxhq.com/" target="_blank">FoxHQ</a></li>
+<li><a href="http://www.grannypornpics.com/" target="_blank">Granny Pics</a></li>
 <li><a href="http://www.bigboobsalert.com/" target="_blank">Big Boobs</a></li>
+<li><a href="http://onhugetits.com/" target="_blank">Huge Tits</a></li>
 <li><a href="http://www.bigbreastarchive.com/" target="_blank">大奶图片</a></li>
 <li><a href="http://www.foxhq.com/" target="_blank">爆乳丰臀画廊</a></li>
 <li><a href="http://www.farangdingdong.com/" target="_blank">FarangDingDong</a></li>
 <li><a href="http://www.aaleg.com/" target="_blank">爱美腿</a></li>
 <li><a href="http://www.ltz6.info/?fromuid=273955" target="_blank">恋臀者</a></li>
-<li><a href="http://www.assdream.com/" target="_blank">Ass Dream</a></li>
-<li><a href="http://www.abigass.com/" target="_blank">ABigAss</a></li>
+<li><a href="http://www.freeteenbutts.com/" target="_blank">Big Butts</a></li>
 <li><a href="http://www.sizu66.com/?fromuid=29341" target="_blank">丝足vip</a></li>
 <li><a href="http://www.meigui98.cc/?fromuid=161579" target="_blank">玫瑰酒吧</a></li>
 <li><a href="http://huaban.com/boards/16607428/" target="_blank">爱莲说</a></li>
@@ -449,7 +449,6 @@
 		<div class="linkl">
 		<ul>
 <li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
-<li><a href="http://www.decask.com/" target="_blank">邪恶漫画吧</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
 <li><a href="https://e-hentai.org/" target="_blank">E-Hentai</a></li>
 <li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
@@ -466,7 +465,7 @@
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
 <li><a href="http://hentai.animestigma.com/" target="_blank">Hentai Stigma</a></li>
 <li><a href="http://hentaistream.com/" target="_blank">Hentai Stream</a></li>
-<li><a href="http://www.hentai.xxx/" target="_blank">Hentai xxx</a></li>
+<li><a href="https://www.hentai.xxx/" target="_blank">Hentai xxx</a></li>
 <li><a href="https://www.fakku.net/" target="_blank">FAKKU</a></li>
 <li><a href="http://www.toonaddict.com/" target="_blank">Toon Addict</a></li>
 <li><a href="http://www.mangago.me/" target="_blank">Mangago</a></li>
@@ -534,7 +533,7 @@
 <li><a href="http://zfuli.pw/" target="_blank">找福利网</a></li>
 <li><a href="http://www.wnflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
-<li><a href="http://meirifuli.fun/" target="_blank">每日福利</a></li>
+<li><a href="https://meirifuli.fun/" target="_blank">每日福利</a></li>
 <li><a href="http://haodiao.org/" target="_blank">haodiao</a></li>
 <li><a href="http://www.jdlingyu.moe/" target="_blank">绝对领域</a></li>
 <li><a href="https://www.dakashangche.com/" target="_blank">司机会所</a></li>
@@ -579,7 +578,7 @@
 <li><a href="http://www.avavav1.com/" target="_blank">AV小四郎</a></li>
 <li><a href="http://3q2w1e.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://jp.notreal.cn/" target="_blank">假啪网</a></li>
-<li><a href="http://www.fh8.in/" target="_blank">番号库</a></li>
+<li><a href="http://www.fhla.me/" target="_blank">番号库</a></li>
 <li><a href="http://www.99fanhao.com/" target="_blank">99番号网</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
 <li><a href="http://mo999.net/" target="_blank">Dioguitar23</a></li>
@@ -691,11 +690,7 @@
 		<ul>
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
-<li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
-<li><a href="https://www.jptun.com/" target="_blank">街拍广场</a></li>
 <li><a href="http://91.t9n.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
-<li><a href="http://www.jiepai456.com/" target="_blank">街拍会</a></li>
-<li><a href="http://www.lu46.com/?fromuid=82145" target="_blank">街拍帮</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
 <li><a href="http://www.qmxyc.com/?fromuid=152203" target="_blank">启明星原创摄影</a></li>
@@ -812,7 +807,7 @@
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
 <li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
-<li><a href="http://www.btyingtao.wang/" target="_blank">BT樱桃</a></li>
+<li><a href="http://www.btcherry.info/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.btkuai.net/" target="_blank">BT快搜</a></li>
 <li><a href="http://www.bt977.com/" target="_blank">BT977</a></li>
 <li><a href="http://www.btmeet.org/" target="_blank">Btbook</a></li>
