--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 		<strong><a name="/5/">国内视频</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.bxzx88.info/" target="_blank">百性在线</a></li>
-<li><a href="http://www.caoliuporn.com/" target="_blank">caoliu视频</a></li>
+<li><a href="http://www.bxzx99.xyz/" target="_blank">百性在线</a></li>
+<li><a href="http://www.javiii.com/" target="_blank">caoliu视频</a></li>
 <li><a href="http://www.tuoleku.com/" target="_blank">脱了裤</a></li>
 <li><a href="http://www.jise8.com/" target="_blank">季色网</a></li>
 <li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
@@ -223,11 +223,12 @@
 <li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://www.avtb789.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb01.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://av234567.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv16.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://cn.ax98.ws/" target="_blank">高清AVHD101</a></li>
+<li><a href="http://www.xhg1234.info/" target="_blank">寻欢阁</a></li>
 <li><a href="http://www.7mshipin.com/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xsq2.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.67sz123.com/" target="_blank">67射站</a></li>
@@ -249,8 +250,8 @@
 <li><a href="https://www.85porn.com/" target="_blank">85Porn</a></li>
 <li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
-<li><a href="http://www.yjizz1.com/" target="_blank">YouJizz</a></li>
-<li><a href="http://fcw18.com/" target="_blank">废柴视频网</a></li>
+<li><a href="http://www.yjizz4.com/" target="_blank">YouJizz</a></li>
+<li><a href="http://fcw26.com/" target="_blank">废柴视频网</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
 <li><a href="http://goodav17.com/" target="_blank">正妹AV</a></li>
@@ -276,7 +277,6 @@
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
 <li><a href="http://www.avku8.com/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.kuav6.com/" target="_blank">猫兔TV</a></li>
-<li><a href="http://www.dbj3333.com/" target="_blank">大宝剑</a></li>
 <li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
 <li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.gogo3333.com/" target="_blank">宅男频道</a></li>
@@ -690,7 +690,7 @@
 		<ul>
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
-<li><a href="http://91.t9n.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://91.p9a.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
 <li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
 <li><a href="http://www.qmxyc.com/?fromuid=152203" target="_blank">启明星原创摄影</a></li>
